--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,6 @@ machine:
  environment:
   workdir: 1
  services:
-  - mongodb
-  - rabbitmq
-  - redis
-  - postgres
+  mongodb
+  redis
+  postgres
